<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>expand_custom_interfaces</name>
  <version>0.0.0</version>
  <description>expanding custom msg, msg with src in the same pkg for ROS2 courses</description>
  <maintainer email="figoowen2003@126.com">ubuntu-ros2</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>  

  <build_depend>tutorial_interfaces</build_depend>
  <exec_depend>tutorial_interfaces</exec_depend>

  <!-- <exec_depend>rclpy</exec_depend>  -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
