<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_lib_loader</name>
  <version>0.0.0</version>
  <description>lib loader demo for ROS2 courses</description>
  <maintainer email="figoowen2003@126.com">ubuntu-ros2</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>my_demo_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
